--- a/main.html
+++ b/main.html
@@ -10,10 +10,15 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder="Enter block id"/>
-  <input id="colour_id" placeholder="Enter colour Hexcode" />
+		<input id="block_id" placeholder="Accio ipsum dolor sit amet"/>
+  <input id="colour_id" placeholder="join course" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
+		<p>Accio ipsum dolor sit amet </p>
+    <p>join course </p>
+    <p>solve assignments </p>
+    <p>get placed above 5 lpa and live life king size </p>
+		
 </div>
   <div class="grid-container">
     <div class="grid-item" id="1">1</div>
